# webidl-utils

./: CHANGELOG.md  Cargo.toml  README.md  crates.js  deny.toml  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: main.yml  security-audit.yml
crates/my-crate/: Cargo.toml
search.desc/webidl_utils/: webidl_utils-desc-0-.js
src/: lib.rs
src/extend/: common.rs  mod.rs  non_any.rs  types.rs
src/symbol/: mod.rs  with_attributes.rs  with_docstring.rs  with_generics.rs  with_identifier.rs  with_identifier2.rs  with_optional_identifier.rs  with_readonly.rs  with_return_type.rs  with_type.rs
src/webidl_utils/: lib.rs.html
webidl_utils/: all.html  index.html  sidebar-items.js
webidl_utils/extend/: index.html  sidebar-items.js  trait.ExtendBraced.html  trait.ExtendBracketed.html  trait.ExtendDocstring.html  trait.ExtendFloatingPointType.html  trait.ExtendFloatingPointTypeNew.html  trait.ExtendFrozenArrayType.html  trait.ExtendGenerics.html  trait.ExtendIntegerType.html  trait.ExtendIntegerTypeNew.html  trait.ExtendMayBeNull.html  trait.ExtendNonAnyType.html  trait.ExtendParenthesized.html  trait.ExtendPromiseType.html  trait.ExtendPunctuated.html  trait.ExtendPunctuatedNonEmpty.html  trait.ExtendRecordKeyType.html  trait.ExtendRecordType.html  trait.ExtendSequenceType.html  trait.ExtendSingleType.html  trait.ExtendType.html
webidl_utils/symbol/: index.html  sidebar-items.js  trait.SymbolWithAttributes.html  trait.SymbolWithDocstring.html  trait.SymbolWithGenerics.html  trait.SymbolWithIdentifier.html  trait.SymbolWithType.html  (+6 more)
(+47 files in other folders)
