[package]
name = "webidl-utils"
version = "0.2.0"
authors = ["Samantha Nguyen <contact@samanthanguyen.me>"]
description = "A crate of utilities for working with the WebIDL AST, by extending weedle2"
repository = "https://github.com/neoncitylights/webidl-utils"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = [
	"webidl"
]
include = ["src"]

[badges]
maintenance.status = "experimental"

[dependencies]
weedle2 = "5.0.0"
